--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="to_crypto">To Crypto</string>
     <string name="to_fiat">To Fiat</string>
     <string name="show_all">Show all</string>
+    <string name="search_hint">Search</string>
 </resources>
