--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="to_fiat">To Fiat</string>
     <string name="show_all">Show all</string>
     <string name="search_hint">Search</string>
+    <string name="no_result">No Result</string>
+    <string name="try_recommendation">Try %s</string>
 </resources>
