--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="show_all">Show all</string>
     <string name="search_hint">Search</string>
     <string name="no_result">No Result</string>
-    <string name="try_recommendation">Try %s</string>
+    <string name="try_recommendation">Try \"%s\"</string>
 </resources>
